# agent-second-brain

./: .gitignore  CLAUDE.md  cleanup.py  get_title.py  main.py  move_back.py  process_inbox.py  pyproject.toml  rename_note.py  test_title.py  test_yt.py
antigravity-awesome-skills/: CATALOG.md  CHANGELOG.md  README.md  package-lock.json  package.json  walkthrough.md
antigravity-awesome-skills/.claude-plugin/: marketplace.json  plugin.json
antigravity-awesome-skills/.github/: MAINTENANCE.md
antigravity-awesome-skills/.github/workflows/: ci.yml
antigravity-awesome-skills/apps/web-app/public/: sitemap.xml  skills.json.backup
antigravity-awesome-skills/data/: catalog.json
antigravity-awesome-skills/plugins/antigravity-awesome-skills/.codex-plugin/: plugin.json
antigravity-awesome-skills/plugins/antigravity-bundle-agent-architect/.claude-plugin/: plugin.json
antigravity-awesome-skills/tools/scripts/: generate_index.py  plugin_compatibility.py  sync_editorial_bundles.py
docs/: full-setup-guide-v1.md
nlm_skill/: .gitignore
scripts/: analyze_video.py  auto_sync_and_process.bat  get_vault_cleaned.py  log_manager.py  process.sh  process_nlm_queue.py  refresh_obsidian.bat  run_listener.py  start_bot.bat  start_nlm_processor.bat  watch_nlm_queue.py
src/d_brain/services/: summarizer.py  telegram_listener.py
vault/: MEMORY.md
vault/.claude/: CLAUDE.md
vault/.claude/docs/: wiki-redesign-plan.md
vault/.claude/skills/dbrain-processor/: SKILL.md
vault/templates/: wiki-article-template.md
vault/wiki/projects/: bizaudit.md  finance.md  seo.md
(+76 files in other folders)
